--- a/ui/src/main/resources/net/gat3way/achilles/ui/frontend/startup/login.fxml
+++ b/ui/src/main/resources/net/gat3way/achilles/ui/frontend/startup/login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.gat3way.achilles.ui.LoginController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.gat3way.achilles.ui.frontend.startup.control.LoginController">
    <children>
       <Label text="Login" />
       <TextField promptText="User" />
